# eye-slitscan

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  CTestTestfile.cmake  DartConfiguration.tcl  LICENSE  README.md  cmake_install.cmake  eye-slitscan.files  eye-slitscan.includes
core/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
core/clustering/: CMakeLists.txt  CTestTestfile.cmake  cluster.cc  cmake_install.cmake  copheneticcorrelation.cc  copheneticcorrelation.h  hac.cc  helper.cc  helper.h
core/clustering/include/: cluster.h  hac.h
core/clustering/test/: CMakeLists.txt  CTestTestfile.cmake  clustering-unit-test  cmake_install.cmake  test.cc
core/importer/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
core/importer/aoi/: CMakeLists.txt  CTestTestfile.cmake  LICENSE  TODO  aoi-importer.cc  cmake_install.cmake
core/importer/aoi/include/: aoi-importer.h
core/importer/aoi/include/tinyxml2/: LICENSE
core/importer/aoi/test/: 01-car pursuit.xml  01-malformed.xml  02-malformed.xml  CMakeLists.txt  CTestTestfile.cmake  aoi_importer-unit-test  cmake_install.cmake  test.cc
core/importer/eye-tracker-output/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  tobii_importer.cc
core/importer/eye-tracker-output/include/: tobii_importer.h
core/importer/eye-tracker-output/test/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  test.cc  tobii_importer-unit-test
core/importer/eye-tracker-output/test/Tobii_exports/: .~lock.P2B-03-dialog.tsv#  .~lock.P4B-03-dialog.tsv#  .~lock.P6A-03-dialog.tsv#  01-BAD.tsv  01-OK.tsv  02-BAD.tsv  02-OK.tsv
core/similarity-measures/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
core/similarity-measures/Testing/Temporary/: CTestCostData.txt
core/similarity-measures/image/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  histo-measure.cc  image-measure.cc
core/similarity-measures/image/include/: histo-measure.h  image-measure.h
core/similarity-measures/image/test/: main.cc  main_histo.cc
core/similarity-measures/scanpath/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  string_edit.cc
core/similarity-measures/scanpath/Testing/Temporary/: CTestCostData.txt
core/similarity-measures/scanpath/include/: dijkstra.h  string_edit.h
core/similarity-measures/scanpath/test/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  mscanpath-unit-test  test.cc
core/similarity-measures/scanpath/test/res/: 02.xml  03.tsv  03.xml  04.tsv  04.xml  P1A-01.tsv
core/similarity-measures/toolboxes/FuncSimToolbox/: FuncSimArtificialExamples.mat  FuncSimAverage.m  FuncSimCore.m  FuncSimDiff.m  FuncSimExampleData.mat  FuncSimRelDur.m  FuncSimScram.m  FuncSim_Instructions.m
core/similarity-measures/toolboxes/MultiMatchToolbox/: calVectorDifferences.m  doComparison.m  generateStructureArrayScanpath.m  mainProposed.m  mainProposed.prj  shortestPath.m  simplifyDirection.m  simplifyScanpath.m
core/similarity-measures/toolboxes/ScanMatchToolbox/: ScanMatch.m  ScanMatch_CheckStructure.m  ScanMatch_CreateSubMatrix.m  ScanMatch_DoubleStrToNum.m  ScanMatch_FixationToSequence.m  ScanMatch_GridMask.m  ScanMatch_NumToDoubleStr.m  ScanMatch_Struct.m  ScanMatch_nwAlgo.m
core/similarity-measures/toolboxes/SubsMatchv2/: README  batchDefendingYarbus.m  bootstrap  generateDefendingYarbusData.m  getSVMWeight.m  kernelSAX.m  libSVMClassification.m  run.m  sallyDefendingYarbus.m
core/similarity-measures/trajectory/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  dtw.cc  edr.cc  euclidean.cc  frechet.cc  util.cc
core/similarity-measures/trajectory/include/: dtw.h  edr.h  euclidean.h  frechet.h  util.h
core/similarity-measures/trajectory/test/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  mtrajectory-unit-test  test.cc
core/similarity-measures/util/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  fixation-to-sequence.cc
core/similarity-measures/util/Testing/Temporary/: CTestCostData.txt
core/similarity-measures/util/include/: .nfs0000000000f1213700000354  fixation-to-sequence.h
core/similarity-measures/util/test/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  sequence-gen-unit-test  test.cc
core/slitscan-generator/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  genslitscan.cc
core/slitscan-generator/include/: genslitscan.h
gui/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  app  app_automoc.cpp  cmake_install.cmake  constants.h  csvexport.cc  csvexport.h  dendrogramitem.cc  dendrogramitem.h  dendrogramview.cc  dendrogramview.h  frameslideritem.cc  frameslideritem.h  historylistitem.cc  historylistitem.h  historylistwidget.cc  historylistwidget.h  hoverablelineitem.cc  hoverablelineitem.h  icons.qrc  icons.qss  interactivelineitem.cc  interactivelineitem.h  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  measuretreeitem.cc  measuretreeitem.h  participant.cc  participant.h  participantmanager.cc  participantmanager.h  representationview.cc  representationview.h  resources.qrc  scanpath_clustering.cc  scanpath_clustering.h  (+19 more)
(+5 files in other folders)
